<resources>
    <string name="app_name">Cotizador</string>
    <string name="imglogo">imgLogo</string>
    <string name="contrase_a">Contraseña:</string>
    <string name="usuario">Usuario:</string>
    <string name="inicio_de_sesi_n">Inicio de Sesión</string>
    <string name="entrar">Entrar</string>
    <string name="categor_a">Categoría:</string>
    <string name="tipo">Tipo:</string>
    <string name="dispositivos">Dispositivos</string>
</resources>
