<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.systeltronik.cotizador.MainActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/imgLogo"
        android:src="@mipmap/ic_logo2"
        android:contentDescription="@string/imglogo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/inicio_de_sesi_n"
        android:id="@+id/txt_log"
        android:layout_below="@+id/imgLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:textColor="#fe8da0d8" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txtUser"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/txt_log"
        android:layout_toEndOf="@+id/lblPassword"
        android:textAlignment="center"
        android:textColor="#fe8da0d8" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txtPass"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/txtUser"
        android:layout_alignStart="@+id/txtUser"
        android:textAlignment="center"
        android:textColor="#fe8da0d8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/usuario"
        android:id="@+id/lblUser"
        android:layout_alignBottom="@+id/txtUser"
        android:layout_alignStart="@+id/imgLogo"
        android:textAlignment="center"
        android:textColor="#fe8da0d8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/contrase_a"
        android:id="@+id/lblPassword"
        android:layout_alignBottom="@+id/txtPass"
        android:layout_alignEnd="@+id/lblUser"
        android:textAlignment="center"
        android:textColor="#fe8da0d8" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entrar"
        android:id="@+id/buttonEntrar"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/txtPass"
        android:layout_centerHorizontal="true"
        android:onClick="Seguir"
        android:textAlignment="center"
        android:textColor="#fe8da0d8" />

</RelativeLayout>
