<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/dispositivos"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textColor="#fe8da0d8"
        android:textSize="30dp"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tipo"
        android:id="@+id/textView3"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="82dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/categor_a"
        android:id="@+id/textView4"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/textView3"
        android:layout_toStartOf="@+id/eLVTipo" />

    <ExpandableListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eLVTipo"
        android:layout_alignTop="@+id/textView3"
        android:layout_toEndOf="@+id/textView3"
        android:layout_marginStart="53dp"
        android:longClickable="false" />

    <ExpandableListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eLVCategoria"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignStart="@+id/eLVTipo" />

    <GridView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/grVDispoditivos"
        android:layout_below="@+id/textView4"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="36dp" />

</RelativeLayout>